# personal-assistant-voice-agent

./: .gitignore  README.md  pyproject.toml
.cursor/plans/: voice_assistant_websocket_5dd4af60.plan.md
components/backend/src/: assemblyai_stt.py  cartesia_tts.py  events.py  main.py
src/: events.py  main.py  utils.py
