[project]
name = "personal-assistant-voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "langchain>=1.2.13",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.42.0",
    "websockets>=16.0",
]
